# rust_exercism

./: .gitignore  Cargo.toml
anagram/src/: lib.rs
anagram/tests/: test.rs
armstrong_numbers/src/: lib.rs
armstrong_numbers/tests/: test.rs
assembly_line/src/: assembly_line.rs  main.rs
clock/src/: lib.rs
clock/tests/: test.rs
gigasecond/src/: lib.rs
gigasecond/tests/: test.rs
health_statistics/src/: lib.rs
health_statistics/tests/: health_statistics.rs
low_power_embedded_game/src/: lib.rs
low_power_embedded_game/tests/: test.rs
lucians_luscious_lasagna/src/: main.rs
magazine_cutout/src/: lib.rs
magazine_cutout/tests/: test.rs
resistor_color/: Cargo.toml
resistor_color/src/: lib.rs
reverse_string/src/: lib.rs
role_playing_game/src/: lib.rs
role_playing_game/tests/: test.rs
rpn_calculator/src/: lib.rs
rpn_calculator/tests/: test.rs
semi_structured_logs/src/: lib.rs  main.rs
short_fibonacci/: Cargo.toml
short_fibonacci/src/: lib.rs
src/: assembly_line.rs  main.rs
