[package]
name = "rust_exercism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "hello_world",
    "lucians_luscious_lasagna",
    "assembly_line",
    "semi_structured_logs",
    "resistor_color",
    "health_statistics",
    "low_power_embedded_game",
    "short_fibonacci",
    "reverse_string",
    "role_playing_game",
    "magazine_cutout",
    "rpn_calculator"
]